# video-duplicate-remover

./: README.md  clean.py  main.py  requirements.txt  setup.cfg  setup.py
command/: clean.py  create.py  delete.py  filter.py  list.py  main.py
command/utils/: helpers.py
