[metadata]
name = video-duplicate-remover
version = 0.1.0
description = A video cleaning cli application
license = MIT
long_description = file: README.md
author = caleb eri
author_email = caleberioluwa@gmail.com
url = https://github.com/caleberi/video-duplicate-remover
long_description_content_type=text/markdown

[options]
packages = find:
include_package_data = True
install_requires =
    click
    black
    setup-cfg-fmt
    setup-py-upgrade

[options.entry_points]
console_scripts =
    video-cleaner-cli = command.main:cli
